   * enable down arrow on scrollbar when resizing (#4809, patch #487)
   * better movement highlighting (patch #488)
   * stop save dialog complaining about bad name when pressing cancel (#4835)
   * pressing 'n' wont take you out of path selection mode (#4833, patch #490)
   * fix broken tooltip in the status bar for plague(argument)
   * added the "/me" command to MP lobby
 * utils
   * added weblist.pl and webtgz.pl web interface programs
   * wml.pm uses substr instead of split: reduces memory usage for large strings
   * wml_net.pm inserts instead of appending: should be more efficient
   * added prkill script, to calculate probabilities to kill in a skirmish
   * added campaign_passphrase.pl for changing passphrases
   * added campaign_delete.pl for deleting campaigns
 * WML improvements:
   * random map generator now uses island_size (#4458)
   * fixed incorrect savefile name after continue_no_save (#4439)
   * fix bad leader starting position causing crash
   * tighten up checks on leaders and units placed on map at start of scenario
   * add a backup save_id to use if both save_id and description are empty
   * fix duplicate key values being concatenated: just replace with last value
   * units can now have [extra_anim] tag, and [animate_unit] event to trigger it
   * added swarm attack special
   * new advance and post_advance events, trigger before/after unit advancement
   * get_random avoids nested [random] tags: keep to limit in compressed saves
   * experience_modifier: only last value kept; to max experience now rounded
     with lower limit of 1
   * defensive_image* deprecated, use defensive animations instead (still work
     but issue warnings, new macros are provided)
   * using [frames] directly in an [attack] tag is deprecated. pleas enclose
     attack animations in [animation] tags
   * [store_unit] now leaves variable untouched if filter does not match
   * units can now have [movement_animation] tags, these are filtered on both