@@ -198,6 +198,7 @@ SVN trunk (1.1-svn):
    * pressing 'n' wont take you out of path selection mode (#4833, patch #490)
    * fix broken tooltip in the status bar for plague(argument)
    * added the "/me" command to MP lobby
+   * don't show illuminated time of day on fogged/shrouded tiles
  * utils
    * added weblist.pl and webtgz.pl web interface programs
    * wml.pm uses substr instead of split: reduces memory usage for large strings
